kubernetes/apps/networking/nginx/internal/diskstation.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: networking
#   name: diskstation
# spec:
#   externalName: diskstation.local
#   ports:
#   - name: https
#     port: 5000
#     protocol: TCP
#     targetPort: 5000
#   sessionAffinity: None
#   type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: diskstation
  namespace: networking
spec:
  ports:
    - name: http
      port: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diskstation
  namespace: networking
  annotations:
    hajimari.io/icon: simple-icons:proxmox
spec:
  ingressClassName: internal
  rules:
  - host: ds.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diskstation
            port:
              number: 5000
  tls:
    - hosts:
      - "ds.${SECRET_DOMAIN}"
---
apiVersion: v1
kind: Endpoints
metadata:
  name: diskstation
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - name: http
        port: 5000
        protocol: TCP
