kubernetes/apps/networking/nginx/internal/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: networking
  name: proxmox
spec:
  externalName: nuc11.local
  ports:
  - name: https
    port: 8006
    protocol: TCP
    targetPort: 8006
  sessionAffinity: None
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" #important
    hajimari.io/icon: simple-icons:proxmox
spec:
  ingressClassName: internal
  rules:
  - host: proxmox.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              number: 8006
  tls:
    - hosts:
      - "proxmox.${SECRET_DOMAIN}"
